# synthetic-runner

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION.md  README.md  SPECIES.md  pyproject.toml
.github/workflows/: pages.yml
config/: harness.yaml
config/instances/: example.yaml  subconscious-dreamer.yaml.backup
config/pipelines/: thrivemind.yaml
proposals/: creative_phase.md  organization.md
proposals/done/: hecate_messages.md  hivemind_heritage.md  trim_long_files.md
proposals/neural_nets/: tools-memory-representations.md
proposals/new/: scheduling_rework.md  scheduling_rework_plan.md  thrivemind_policy_alternatives.md  thrivemind_policy_framework.md  thrivemind_policy_summary.md
scripts/: build-pages.py
symbiosis/: __init__.py  __main__.py  matrix_cli.py  scheduling.py  setup_wizard.py
symbiosis/harness/: checker.py  config.py  context.py  jobqueue.py  registry.py  scheduler.py  storage.py  store.py  worker.py
symbiosis/species/: __init__.py  draum.py  hecate.py  subconscious_dreamer.md  thrivemind.md  thrivemind.py
symbiosis/toolkit/: activation_map.py  deliberate.py  graph.py  hecate.py  (+10 more)
tests/: test_activation_map.py  test_adapters.py  test_analytics.py  test_checker.py  test_compactor.py  test_config.py  test_consilium_species.py  test_context.py  test_creative.py  test_decisions.py  test_deliberate.py  test_draum.py  test_graph.py  test_hecate_species.py  test_hecate_toolkit.py  test_hivemind_toolkit.py  test_identity.py  test_jobqueue.py  test_jobqueue_migration.py  test_main.py  test_matrix_cli.py  test_neural.py  test_neural_dreamer.py  test_organize.py  test_patterns.py  test_phases.py  test_pipeline.py  test_providers.py  test_publish.py  test_rendering.py  test_response_validator.py  test_sanitize.py  test_scheduler.py  test_scheduler_constraints.py  test_scheduling.py  test_segments.py  test_setup_wizard.py  test_storage.py  test_store.py  test_subconscious_dreamer.py  (+7 more)
(+33 files in other folders)
